--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <section class="principal">
             <div class="conteudo1">
                 <section class="maps">
-                    <div id="message" class="mirage"><a href="mirage.html"><p><strong>Minecraft</strong></p></a></div>
-                    <div class="inferno"><a href="inferno.html"><p><strong>Terraria</strong></p></a></div>
-                    <div class="dust2"><a href="dust2.html"><p><strong>Don't starve</strong></p></a></div>
-                    <div class="overpass"><a href="overpass.html"><p><strong>God of war</strong></p></a></div>
-                    <div class="nuke"><a href="nuke.html"><p><strong>Clash of clan</strong></p></a></div>
-                    <div class="vertigo"><a href="vertigo.html"><p><strong>Csgo</strong></p></a></div>
-                    <div class="train"><a href="train.html"><p><strong>Pokemon go</strong></p></a></div>
+                    <div class="minecraft"><a href="Minecraft.html"><p><b>Minecraft</b></p></a></div>
+                    <div class="terraria"><a href="Terraria.html"><p><b>Terraria</b></p></a></div>
+                    <div class="dontstarve"><a href="Don't starve.html"><p><b>Don't starve</b></p></a></div>
+                    <div class="godofwar"><a href="God of war.html"><p><b>God of war</b></p></a></div>
+                    <div class="clashofclan"><a href="Clash of clans.html"><p><b>Clash of clan</b></p></a></div>
+                    <div class="csgo"><a href="Csgo.html"><p><b>Csgo</b></p></a></div>
+                    <div class="pokemongo"><a href="Pokemon go.html"><p><b>Pokemon go</b></p></a></div>
                 </section>
             </div>
 
@@ -46,10 +46,10 @@
                         <img src="imagens/Sem título2.png" alt="erro">
                     </picture></a></div>
                     <div><a href="news/xadrez.html"><p><b>O que é xadrez？</b></p></a></div>
-                    <div><a href="news/coastnew.html"><p><b>O que é pega pega？</b></p></a></div>
-                    <div><a href="news/furianew.html"><p><b>Supercell</b></p></a></div>
-                    <div><a href="news/sknew.html"><p><b>Brawl stars</b></p></a></div>
-                    <div><a href="news/lgnew.html"><p><b>Clash royale'raiva não recomendo'</b></p></a></div>
+                    <div><a href="news/pegapega.html"><p><b>O que é pega pega？</b></p></a></div>
+                    <div><a href="news/supercell.html"><p><b>Supercell</b></p></a></div>
+                    <div><a href="news/brawlstars.html"><p><b>Brawl stars</b></p></a></div>
+                    <div><a href="news/clashroyale.html"><p><b>Clash royale'raiva não recomendo'</b></p></a></div>
                 </section>
             </div>
 
