--- a/contato.html
+++ b/contato.html
@@ -25,13 +25,13 @@
         <section class="principal">
             <div class="conteudo1">
                 <section class="maps">
-                    <div class="mirage"><a href="mirage.html"><p><b>Minecraft</b></p></a></div>
-                    <div class="inferno"><a href="inferno.html"><p><b>Terraria</b></p></a></div>
-                    <div class="dust2"><a href="dust2.html"><p><b>Don't starve</b></p></a></div>
-                    <div class="overpass"><a href="overpass.html"><p><b>God of war</b></p></a></div>
-                    <div class="nuke"><a href="nuke.html"><p><b>Clash of clan</b></p></a></div>
-                    <div class="vertigo"><a href="vertigo.html"><p><b>Csgo</b></p></a></div>
-                    <div class="train"><a href="train.html"><p><b>Pokemon go</b></p></a></div>
+                    <div class="minecraft"><a href="Minecraft.html"><p><b>Minecraft</b></p></a></div>
+                    <div class="terraria"><a href="Terraria.html"><p><b>Terraria</b></p></a></div>
+                    <div class="dontstarve"><a href="Don't starve.html"><p><b>Don't starve</b></p></a></div>
+                    <div class="godofwar"><a href="God of war.html"><p><b>God of war</b></p></a></div>
+                    <div class="clashofclan"><a href="Clash of clans.html"><p><b>Clash of clan</b></p></a></div>
+                    <div class="csgo"><a href="Csgo.html"><p><b>Csgo</b></p></a></div>
+                    <div class="pokemongo"><a href="Pokemon go.html"><p><b>Pokemon go</b></p></a></div>
                 </section>
             </div>
 
